Added functionality to allow user to specify custom fpth_input

--- a/examples/notebooks/overheating/createmodelrun.ipynb
+++ b/examples/notebooks/overheating/createmodelrun.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "import pandas as pd\n",
-    "from ipyrun.ipyrun import RunAppModelRun\n",
+    "from ipyrun.ipyrun import RunAppModelRun, RunApp\n",
     "from mf_modules.j_header import markdown_header\n",
     "from mf_modules.pydtype_operations import write_json\n",
     "from mf_modules.file_operations import make_dir"
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6ea44630a16473ea405af6f6ee11925",
+       "model_id": "ae3b13d8b51c4c468908f50a4734536b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "098f014953984f42a6e472fed3a37d2f",
+       "model_id": "a359033cab314e039bcaa42bac3cd28f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "421a8dba2db340428e5dfc9c31c50a2d",
+       "model_id": "3743d572fb604d06ab866eca9f104c22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,10 +77,14 @@
     }
    ],
    "source": [
+    "fdir_inputs = r'C:\\engDev\\git_mf\\ipyrun\\examples\\testjson'\n",
+    "fpth_inputs = r'C:\\engDev\\git_mf\\ipyrun\\examples\\testjson\\test_modelrun.json'\n",
     "config={\n",
+    "    'fpth_inputs': os.path.realpath(fpth_inputs),\n",
+    "    'fdir_inputs': os.path.realpath(fdir_inputs),\n",
     "    'fpth_script':os.path.realpath(fpth_script),\n",
-    "    'fdir':NBFDIR\n",
-    "    }  \n",
+    "    'fdir':NBFDIR,\n",
+    "    }\n",
     "r = RunAppModelRun(config)\n",
     "r"
    ]
