--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,21 +501,18 @@
     "        return \"{0}\".format(labelVal)\n",
     "    \n",
     "    def _update_change(self, change):\n",
-    "        self.li = []\n",
     "        for index, l in enumerate(self.widgets):\n",
-    "            self.li.append(l.di)\n",
     "            if(l.widget_name==\"DerivedText\"):\n",
     "                l.widget_only.value = self._update_label(index, l)\n",
-    "            \n",
     "    \n",
     "    def _layout(self):\n",
-    "        self._update_change(\"value\")\n",
+    "        self._update_change(change=None)\n",
     "        super()._layout()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,10 +622,11 @@
     "    def _save_changes(self, sender):\n",
     "        \"\"\"save changes to working inputs file\"\"\"\n",
     "        fpth = self.fpth_inputs\n",
+    "        \n",
     "        dateTimeObj = datetime.now()\n",
     "        self.save_timestampStr = dateTimeObj.strftime(\"%d-%b-%Y %H:%M:%S\")\n",
     "        self.temp_message.value = markdown('{0} saved at: {1}'.format(fpth, self.save_timestampStr))\n",
-    "        \n",
+    "        print(self.li)\n",
     "        self.data_out = self.li \n",
     "        # add code here to save changes to file\n",
     "        write_json(self.data_out,\n",
@@ -704,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +732,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db322b67c8cd4466b0e146b6437d16f2",
+       "model_id": "1a372323a7814340a56a6cc2d1916747",
        "version_major": 2,
        "version_minor": 0
       },
@@ -748,7 +746,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f87e8c318844b8495f65c1fc4a418be",
+       "model_id": "98f28e376bef44d7826079ba33bdfe2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -762,7 +760,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00b9ab1d5da5419a9bbe98d3dda2181e",
+       "model_id": "a8de76db53064381ab48c5f31fb23a4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -776,7 +774,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "167697e0fd0749d996ea1af3a3d45e93",
+       "model_id": "bc34042ac4d9460aaf1676eb16705c43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -790,7 +788,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a160ba39c1ed48a3820b9e2ab47faee8",
+       "model_id": "a9553bf4424941789a8b2f997f29c965",
        "version_major": 2,
        "version_minor": 0
       },
@@ -804,7 +802,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "140ebd4e70e448f78cac35704b06b449",
+       "model_id": "35ba3de1238f4859873a8ae5d3ec1606",
        "version_major": 2,
        "version_minor": 0
       },
@@ -818,7 +816,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "304db6c530214fe09e8ccde882cc72bd",
+       "model_id": "f6c1ccbf77344e8a808e7f8d21c67dcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -832,7 +830,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87086e850d3446328c9ce46ca8d0aad5",
+       "model_id": "fea5a18372ee43c4acd2a2e35c3577e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -846,7 +844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b453c1cef3af4694bc4894a5ef68de4f",
+       "model_id": "e20a3f04727f46189873b4633b12e257",
        "version_major": 2,
        "version_minor": 0
       },
@@ -906,7 +904,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46b13dd6d82e40efb38d85e7659e6932",
+       "model_id": "1941a6aa2f6f4af6ab0a132e60c6fceb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -920,7 +918,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63fa8b09fc684975948a3b6fdc5f0aeb",
+       "model_id": "337c7e4037ff4ef6ae7505f2ad5428af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -934,7 +932,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "860ef30fe8664f6ea427e7792ffc8dc6",
+       "model_id": "2e38d294aef64f63b287dc4229b3a60f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -948,7 +946,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07436156a5334f98b38ff3e0dd4077ee",
+       "model_id": "f4e39e191d9c4c29bb65d74ec1e48294",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +960,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fec8892580f140049f11efe9e38a098d",
+       "model_id": "c20ebc8916ef4b1d85424aeaf22f1d53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -976,7 +974,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f67d4c0afc554a5c8ea652c519370859",
+       "model_id": "670e5c2bfe134fb4b0754e15ec6aa0e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -990,7 +988,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77d87dc3e305490790bb13bb9848a64a",
+       "model_id": "44db0976c00e4270aef3780e77acfe29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1004,7 +1002,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f85fcd4ad3845e4b41df81285e83a30",
+       "model_id": "051fe644020145dc8b54b2f175c34d90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1018,7 +1016,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41794f2a5cb544f5971a66bb449801a7",
+       "model_id": "82f77ee2e590434c9f84e1b42c80fced",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1032,7 +1030,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46a3fb6550c84d40ad7dda6cf8554730",
+       "model_id": "e8a0eeaa60a14da6b9812ff8f0ab1b0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1046,7 +1044,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b93b042232764707ac502c3d2dbfff60",
+       "model_id": "2c5fb34eb763404a92528177e2058dea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1106,7 +1104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5336319ac394077b19952cad4e923a0",
+       "model_id": "c6f205749bcf4541ba01276f988be0f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1120,7 +1118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec62a2e99fc24a0daf3b7f9da87ed415",
+       "model_id": "36b390e8a2234371a1fd422aa9cb2d15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1134,7 +1132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "954dedac3ea8442bb62109dc2053689b",
+       "model_id": "a8a1fb3470c54c399eb5f68f5d82ef2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1194,7 +1192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecdf979530744bc09c29ff0fcc05ceb9",
+       "model_id": "e0b93191ffe74687a0b053ddbbb8be2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1208,7 +1206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd2793da10334337a1e094edebcbe9bd",
+       "model_id": "cbf5e84c54e34b3ca2fbb483836ef936",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1222,7 +1220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb6e93c1a8544598802232bf31336591",
+       "model_id": "2953ce95b87c47ac81b4c58a3adf73be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1294,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a5fc4626b88469f8778472c148f2b8c",
+       "model_id": "809bc9555f964eed9fb46971842c3526",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1308,7 +1306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3da559a880be4b25aa615814eea6b109",
+       "model_id": "cb9fb21083f742fb966de77541e1dc55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1322,7 +1320,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56401ec291fe498a831e783fa1b54791",
+       "model_id": "be8c8b55ff0f4168be3d918cee7c3bfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1336,7 +1334,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd5a9825ece94792847936e12fa65ce1",
+       "model_id": "a1cbc00e2f59422386b3b613d6ba1fe4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1350,7 +1348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb1726b82e7849c1a2b4b1f2f0062230",
+       "model_id": "b11023a726c24350b8667eae23b1aa4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1364,7 +1362,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bac6f902e5a24c53872813e8313272a2",
+       "model_id": "0c0e6ac4b807465d831c836fd0b15cbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1378,7 +1376,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4ee9bd92ff04195ada952eac9df1974",
+       "model_id": "8b7764a3a5e5444e810e78e0c287c02a",
        "version_major": 2,
        "version_minor": 0
       },
