--- a/ipyrun/_runconfig.ipynb
+++ b/ipyrun/_runconfig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -202,7 +202,12 @@
     "\n",
     "    def _fpth_inputs(self):\n",
     "        src = self.fpth_template_input\n",
-    "        dstn = os.path.join(self.fdir_inputs, os.path.basename(src))\n",
+    "        \n",
+    "        if 'fpth_inputs' in self.user_keys:\n",
+    "            dstn = self.config['fpth_inputs']\n",
+    "        else:\n",
+    "            dstn = os.path.join(self.fdir_inputs, os.path.basename(src))\n",
+    "\n",
     "        if not os.path.isfile(dstn):\n",
     "            copyfile(src, dstn)\n",
     "        return dstn\n",
@@ -314,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -325,21 +330,16 @@
      "text": [
       "{'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun',\n",
       " 'fdir_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config',\n",
-      " 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
+      " 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\test',\n",
       " 'fdir_inputs_archive': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive',\n",
       " 'fdir_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log',\n",
       " 'fdir_outputs': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\external'],\n",
       " 'fnm_config': 'config-eplus_pipework_params.json',\n",
       " 'fnm_log': 'log-eplus_pipework_params.csv',\n",
       " 'fpth_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config\\\\config-eplus_pipework_params.json',\n",
-      " 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
-      " 'fpth_inputs_options': {'project': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
-      "                                     'fpths': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params-1.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625-inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200607_1420-jg-inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200611_1021-jg-inputs-eplus_pipework_params.csv']},\n",
+      " 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\test\\\\blah.csv',\n",
+      " 'fpth_inputs_options': {'project': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\test',\n",
+      "                                     'fpths': []},\n",
       "                         'template': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs',\n",
       "                                      'fpths': ['C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs\\\\inputs-eplus_pipework_params.csv']}},\n",
       " 'fpth_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log\\\\log-eplus_pipework_params.csv',\n",
@@ -365,11 +365,21 @@
     "    config = {\n",
     "        'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
     "        'fdir':'.',\n",
+    "        #'fpth_inputs':r'C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\test\\test.csv',\n",
+    "        #'fdir_inputs':r'C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\test'\n",
     "        }\n",
     "    from pprint import pprint\n",
     "    rc = RunConfig(config)\n",
-    "    pprint(rc.config)"
+    "    pprint(rc.config)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
