--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -554,7 +554,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c283b9e904284aca911635342505ee39",
+       "model_id": "20c2faf821d54bfe9da2551fd0594089",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,7 +568,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7283ececd354438b5d778de8ce8e34c",
+       "model_id": "6dbf5dec5312495ab0455fe992489c50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -637,7 +637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "147684026f1d49488034aece0a413141",
+       "model_id": "21f4edec5da54186a805b0ae924c233d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -651,7 +651,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ab0a706730c4146b5e53df499fe2967",
+       "model_id": "5c851be215f2495d83acc5f2d7d4ce93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -741,7 +741,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7270d95190b94a49a5dfe384f8947b1e",
+       "model_id": "01b20928590741249623f7b73e89333f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -755,7 +755,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5385e713850e4b9a8eb012a58e37eb5f",
+       "model_id": "e8e16254546041c48eb63e28f100b422",
        "version_major": 2,
        "version_minor": 0
       },
@@ -769,7 +769,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96ad3d9f7c6f407ea130a13b625ebe07",
+       "model_id": "8b021e94bbbd49aa9d9929cf9760b8e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -783,7 +783,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bc2dd635e4748af8266d35144c402df",
+       "model_id": "c5442b5ecd834e7192ca219a276e694d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -797,7 +797,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd90792f2aa54e679a4ff3658a5409e2",
+       "model_id": "b766356f9f294d17a54e19a2d93adeae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -811,7 +811,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e5765bae8e249de8f0a18e8c304c509",
+       "model_id": "8354c59f931b4dc6857ffb893e0e3626",
        "version_major": 2,
        "version_minor": 0
       },
@@ -825,7 +825,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "811a6288d4d24a78bf63435ccd443515",
+       "model_id": "542c358dc85f4017b2980d3a569cbe5a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -839,7 +839,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c3aa6c9d8b148d490234c78c7a92942",
+       "model_id": "8a9e494e82a54203ae7d0e3ec5d69086",
        "version_major": 2,
        "version_minor": 0
       },
@@ -876,12 +876,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "create_model_run_file_0\n",
-      "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\create_model_run_file_0.json\n",
-      "create_model_run_file_1\n",
-      "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\create_model_run_file_1.json\n",
-      "create_model_run_file_2\n",
-      "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\create_model_run_file_2.json\n"
+      "{'fpth_script': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\scripts\\\\create_model_run_file.py', 'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun', 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs\\\\create_model_run_file_0.json', 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs'}\n",
+      "{'fpth_script': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\scripts\\\\create_model_run_file.py', 'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun', 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs\\\\create_model_run_file_1.json', 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs'}\n",
+      "{'fpth_script': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\scripts\\\\create_model_run_file.py', 'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun', 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs\\\\create_model_run_file_2.json', 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs'}\n"
      ]
     },
     {
@@ -911,7 +908,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0ce7a07571c4e2980771163cd2984c6",
+       "model_id": "3bd62c8fed5b487898545d6f1634ff76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -925,7 +922,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d0d6e9949064afc9eb926246963716d",
+       "model_id": "d12e37384e204b93a46ef44c25ebcef2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -939,7 +936,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3668c4e8ef814bf6acb7a56e3881bb73",
+       "model_id": "64ee128a04944b40bf05b1bf26ff24ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -953,7 +950,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7b15d8d52b442ce8f160fbf6f8e0dcc",
+       "model_id": "10fd06784e8f4e4d9cba554a0431fa32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -967,7 +964,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abc9deb851f4490eb181a3805cd72efc",
+       "model_id": "3f93443380ce46d0825506563c2e39ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -981,7 +978,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d911ef8fd8bc429eb1317cfb9eacd563",
+       "model_id": "ca9c83e9ab5b488ea69e2b3c1fb5a386",
        "version_major": 2,
        "version_minor": 0
       },
@@ -995,7 +992,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c64bed6b8a24a63bede70c964d3f83a",
+       "model_id": "9e203c911faf47cd9f9fc2367567f86a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1009,86 +1006,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "091a23cb16a741ae8ee94227c3171f06",
+       "model_id": "60850ed0016848ba84cc638254a1fef4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Example5"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "EDIT JSON FILE with custom config and file management"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa84e4c78f5c49e79b4d43ea0916f309",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "336684e96b7f4e02a2ad807fd25e21b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "---"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
@@ -1240,40 +1163,24 @@
     "    iters = 3\n",
     "    batch = []\n",
     "    di_config = RunApp(config).config\n",
+    "\n",
     "    for n in range(0,iters):\n",
     "        tmp = di.copy()\n",
     "        process_name = os.path.splitext(os.path.basename(di['fpth_script']))[0] + '_' + str(n)\n",
-    "        tmp['fpth_inputs'] = os.path.join(di_config['fdir_inputs'],'{0}{1}'.format(process_name,'.json'))\n",
-    "        print(process_name)\n",
-    "        print(tmp['fpth_inputs'])\n",
+    "        fdir_modelruninput = os.path.join(di_config['fdir_inputs'], r'modelruninputs')\n",
+    "        fpth_modelruninput = os.path.join(fdir_modelruninput, '{0}{1}'.format(process_name,'.json'))\n",
+    "        tmp['fpth_inputs'] = fpth_modelruninput\n",
+    "        tmp['fdir_inputs'] = fdir_modelruninput\n",
+    "        print(tmp)\n",
     "        tmp.update({'process_name':process_name})\n",
     "        batch.append({'app':RunAppModelRun,'config':tmp})\n",
-    "    \n",
+    "\n",
     "    runapps = RunApps(batch)  \n",
     "\n",
     "    display(Markdown('### Example4'))\n",
     "    display(Markdown('''Batch Run of RunApps, for ModelRun'''))\n",
     "    display(runapps)\n",
-    "\n",
-    "    # Example5 --------------------------\n",
-    "    # EDIT JSON FILE with custom config and file management\n",
-    "    \n",
-    "    fpth_input = r'.\\testjson\\inputs-create_model_run_file.json'\n",
-    "    fpth_script = r'..\\examples\\scripts\\create_model_run_file.py'\n",
-    "    config = {\n",
-    "        'fpth_script':os.path.realpath(fpth_script),\n",
-    "        'fdir':NBFDIR,\n",
-    "        'fpth_inputs':os.path.realpath(fpth_input)\n",
-    "    }    \n",
-    "\n",
-    "    rjson = RunApp(config)  \n",
-    "    display(Markdown('### Example5'))\n",
-    "    display(Markdown('''EDIT JSON FILE with custom config and file management'''))\n",
-    "    display(rjson)\n",
-    "\n",
-    "    display(Markdown('---'))  \n",
-    "    display(Markdown(''))  \n",
-    "    "
+    "\n"
    ]
   },
   {
@@ -1295,7 +1202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
